<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/themeBACK"
    tools:context=".MyPropertyActivity" >

    <!-- The main content view -->

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <RelativeLayout
                android:id="@+id/Header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp" >

                <TextView
                    android:id="@+id/txtAddProperty"
                    style="@style/ClickLink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:clickable="true"
                    android:paddingBottom="5dp"
                    android:text="@string/addproperty" />

                <TextView
                    android:id="@+id/Count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/txtAddProperty"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="15dp"
                    android:paddingBottom="0dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="0dp"
                    android:text="0 Properties" />

                <LinearLayout
                    android:id="@+id/SellRent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/txtAddProperty"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin" >

                    <TextView
                        android:id="@+id/txtSell"
                        style="@style/ClickLinkSmallSelected"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="15dp"
                        android:clickable="true"
                        android:text="@string/sell" />

                    <TextView
                        android:id="@+id/txtRent"
                        style="@style/ClickLinkSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:text="@string/rent" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/RefreshDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/txtAddProperty"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin" >

                    <TextView
                        android:id="@+id/txtRefresh"
                        style="@style/ClickLinkSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="15dp"
                        android:clickable="true"
                        android:text="@string/refresh" />

                    <TextView
                        android:id="@+id/txtDelete"
                        style="@style/ClickLinkSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:text="@string/delete" />
                </LinearLayout>
            </RelativeLayout>

            <View
                android:id="@+id/hr"
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:layout_below="@+id/Header"
                android:background="#069bcc" />

            <ListView
                android:id="@+id/listProperties"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_above="@+id/Footer"
                android:layout_below="@+id/hr"
                android:background="@color/themeWHITE"
                android:cacheColorHint="@android:color/transparent"
                android:listSelector="@android:color/transparent" >
            </ListView>

            <RelativeLayout
                android:id="@+id/Footer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:background="@drawable/footer" >

                <TextView
                    android:id="@+id/txtAbbreviations"
                    style="@style/ClickLink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_margin="1dp"
                    android:background="#00000000"
                    android:clickable="true"
                    android:text="@string/abbreviation" />

                <TextView
                    android:id="@+id/txtHelp"
                    style="@style/ClickLink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_margin="1dp"
                    android:background="#00000000"
                    android:clickable="true"
                    android:gravity="right"
                    android:text="@string/help" />
            </RelativeLayout>

            <FrameLayout
                android:id="@+id/pbProgess"
                style="@style/ProgressBack"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:visibility="gone" >

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />
            </FrameLayout>
        </RelativeLayout>
    </FrameLayout>
    <!-- The navigation drawer -->

    <ScrollView
        android:id="@+id/left_drawer"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#fff" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:background="#fff"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingRight="@dimen/activity_horizontal_margin" >

            <TextView
                android:id="@+id/navHeading"
                style="@style/PageHead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="Home" />

            <TextView
                android:id="@+id/txtMyProperties"
                style="@style/ListButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/myproperties" />

            <TextView
                android:id="@+id/txtAddProperties"
                style="@style/ListButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/addproperty" />

            <TextView
                android:id="@+id/txtMyNoticeboard"
                style="@style/ListButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/mynoticeboard" />

            <TextView
                android:id="@+id/txtMyAccount"
                style="@style/ListButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/myaccount" />

            <TextView
                android:id="@+id/navView"
                style="@style/PageHead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="View / Search" />

            <TextView
                android:id="@+id/txtProperties"
                style="@style/ListButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="Property List" />

            <TextView
                android:id="@+id/txtAgents"
                style="@style/ListButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="Agents List" />

            <TextView
                android:id="@+id/txtNoticeboard"
                style="@style/ListButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/noticeboard" />

            <TextView
                android:id="@+id/txtMyCityTown"
                style="@style/ListButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="Change City Town"
                android:textColor="#999" />
        </LinearLayout>
    </ScrollView>

</androidx.drawerlayout.widget.DrawerLayout>