<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/themeWHITE"
    tools:context=".MyNoticeboardActivity" >

    <!-- The main content view -->

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <TextView
                android:id="@+id/txtMessage"
                style="@style/Field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Your Message -" />

            <TextView
                android:id="@+id/Count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/txtMessage"
                android:layout_alignParentRight="true"
                android:paddingBottom="0dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="0dp"
                android:text="0 Lines" />

            <EditText
                android:id="@+id/valMessage"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtMessage"
                android:layout_centerHorizontal="true"
                android:background="@drawable/edittextbox"
                android:ems="10"
                android:inputType="textMultiLine"
                android:maxLength="300"
                android:padding="10dp" >

                <requestFocus />
            </EditText>

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/valMessage"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btnUpdate"
                    style="@style/Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/update" />

                <TextView
                    android:id="@+id/txtCancel"
                    style="@style/ClickLink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    android:text="@string/cancel" />
            </LinearLayout>
        </RelativeLayout>

        <FrameLayout
            android:id="@+id/pbProgess"
            style="@style/ProgressBack"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:visibility="gone" >

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </FrameLayout>
    </FrameLayout>
    <!-- The navigation drawer -->

    <ScrollView
        android:id="@+id/left_drawer"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#fff" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:background="#fff"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingRight="@dimen/activity_horizontal_margin" >

            <TextView
                android:id="@+id/navHeading"
                style="@style/PageHead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="Home" />

            <TextView
                android:id="@+id/txtMyProperties"
                style="@style/ListButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/myproperties" />

            <TextView
                android:id="@+id/txtAddProperties"
                style="@style/ListButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/addproperty" />

            <TextView
                android:id="@+id/txtMyNoticeboard"
                style="@style/ListButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/mynoticeboard" />

            <TextView
                android:id="@+id/txtMyAccount"
                style="@style/ListButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/myaccount" />

            <TextView
                android:id="@+id/navView"
                style="@style/PageHead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="View / Search" />

            <TextView
                android:id="@+id/txtProperties"
                style="@style/ListButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="Property List" />

            <TextView
                android:id="@+id/txtAgents"
                style="@style/ListButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="Agents List" />

            <TextView
                android:id="@+id/txtNoticeboard"
                style="@style/ListButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/noticeboard" />

            <TextView
                android:id="@+id/txtMyCityTown"
                style="@style/ListButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="Change City Town"
                android:textColor="#999" />
        </LinearLayout>
    </ScrollView>

</androidx.drawerlayout.widget.DrawerLayout>