<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/themeWHITE"
    tools:context=".HomeActivity" >

    <ScrollView
        android:id="@+id/scrollContent"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/ShareBlock" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <TextView
                android:id="@+id/Heading"
                style="@style/PageHead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:paddingBottom="0px"
                android:text="Om Estate Agency Pvt Limited" />

            <TextView
                android:id="@+id/txtMyProfile"
                style="@style/ClickLinkSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/Heading"
                android:layout_marginBottom="5dp"
                android:clickable="true"
                android:text="edit / view" />

            <LinearLayout
                android:id="@+id/Profile"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_below="@+id/txtMyProfile"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/txtMyProperties"
                    style="@style/ListButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:text="@string/myproperties"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txtAddProperty"
                    style="@style/ListButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:text="@string/addproperty"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txtMyNoticeboard"
                    style="@style/ListButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:text="@string/mynoticeboard"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txtMyAccount"
                    style="@style/ListButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:text="@string/myaccount"
                    android:textSize="20sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/View"
                style="@style/PageHead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/Profile"
                android:text="View / Search" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_below="@+id/View"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/txtProperties"
                    style="@style/ListButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:text="Property List"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txtAgents"
                    style="@style/ListButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:text="Agents List"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txtNoticeboard"
                    style="@style/ListButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:text="@string/noticeboard"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txtMyCityTown"
                    style="@style/ListButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:text="Change City Town"
                    android:textColor="#999"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txtContactUs"
                    style="@style/ListButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:text="Contact Us"
                    android:textColor="#999"
                    android:textSize="20sp" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <TextView
        android:id="@+id/ShareBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#069bcc"
        android:clickable="true"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:text="Share this App"
        android:textColor="@color/themeWHITE"
        android:textSize="22sp"
        android:textStyle="bold" />

</RelativeLayout>